--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,18 @@
 .bg-cian {
     background-color: var(--cian-vibrante);
 }
+
+/* Link */
+
+.simple-link {
+    display: block;
+    color: var(--azul-oscuro-1);
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+    text-decoration: none;
+}
+
+.simple-link:hover {
+    color: var(--cian-vibrante);
+}
